# sudoku_qt_quick

./: CMakeLists.txt  Main.qml  README.md  icon.icns  main.cpp  resources.rc
android/: AndroidManifest.xml
content/: DifficultyPad.qml  NumberPad.qml  SudokuButton.qml  SudokuGameButton.qml  SudokuGameButtonWithIcon.qml  SudokuTable.qml  SudokuToolBar.qml  sudoku.js
